--- a/简历.md
+++ b/简历.md
@@ -1,96 +1,68 @@
 # 个人信息
 
- - 胶布帝/男/1990
- - 本科/萌鹿大学计算机系
- - 工作年限：3年
- - 微博：[@JobDeer](http://weibo.com/jobdeer) （``` 如果没有技术相关内容，也可以不放 ```）
- - 技术博客：http://blog.github.io ( ``` 使用GitHub Host的Big较高 ```  )
- - Github：http://github.com/geekcompany ( ``` 有原创repo的Github帐号会极大的提升你的个人品牌 ```  )
- - 手机：135******** （```如果是外地手机，可注明。如经常关机，要写上最优联系时间```）
- - Email：goodman@gmail.com （```虽然我觉得QQ邮箱无所谓，不过有些技术人员比较反感，建议用G```）
- - QQ/微信号：6*******（```提供一个通过网络可以联系到你的方式```）
-
- - 期望职位：PHP高级程序员，应用架构师
- - 期望薪资：税前月薪15k~20k，特别喜欢的公司可例外
- - 期望城市：北京
+ - 柳洋/男/1987
+ - 工作年限：9年
+ - Github：http://github.com/DamonLiu0814 
+ - 手机：18071112670
+ - Email：china.wuhan.liuyang@hotmail.com
+ - QQ：315276651
+ - 期望职位：odoo工程师
+ - 期望薪资：税前月薪15k~20k
+ - 期望城市：上海
 
 ---
 
 # 工作经历
-（工作经历按逆序排列，最新的在最前边，按公司做一级分组，公司内按二级分组）
 
-## ABC公司 （ 2012年9月 ~ 2014年9月 ）
+## 上海喜宝供应链管理有限公司 （ 2018年10月 ~ 至今 ）
 
-### DEF项目
-我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
+### 喜宝ERP
+喜宝ERP是一套比较成熟的进销存解决方案，包括 *基础数据*，*基础功能*，*销售*，*采购申请*，*委外加工*，*仓库管理*，*电子称重*，*权限管理*，*定制管理*，*门店管理*模块，基本覆盖了公司的主要业务范围，这个项目中，我负责整个项目的代码质量管控，仓库模块及通用功能。
 
+## odoo自由顾问 （ 2017年5月 ~ 2017年11月 ）
 
-### GHI项目
-我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
+### 卓越MES系统重构
+卓越MES系统是舜宇集团的核心ERP，包括 MDM主数据，销售管理，采购管理，质检管理，品质追溯管理，SAP数据对接，生产工艺管理，生产周期管理等模块，我在这个项目中负责 MDM主数据，销售管理，生产工艺管理。
 
+## 优帕克投资有限公司 （ 2017年3月 ~ 2017年5月 ）
 
-### 其他项目
+### 极优CRM
+极优CRM是公司租赁业务量身定做的一款产品，包含房源管理，费用管理，门将安全管理，房屋租赁发布，在线模拟看房等功能，我在这个项目中负责 房源管理及手机APP的接口处理。
 
-（每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）
+## Shanghai Elico Limited （ 2016年3月 ~ 2017年3月 ）
 
+### sita项目
+sita是Elico的长期客户，主要负责处理上海及周边的有毒有害液体，一个标准的CRM系统，本人主要负责项目的日常维护及新需求的开发
 
-## JKL公司 （ 2010年3月 ~ 2012年8月 ）
+### 电缆切割项目
+cable项目是中船重工的外包项目，主题业务为切割大型货船上的电缆，本人负责整个项目的需求调研及开发
 
-### MNO项目
-我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
+## 百脑汇(中国)投资有限公司 （ 2013年3月 ~ 2016年3月 ）
 
+### 预算系统
+预算系统是蓝天集团为了更有效的管理预算而开发的一套Oracle外围系统，可实时修改当月及后11个月的预算，纯wedget开发
 
-### PQR项目
-我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
+### LCD播放系统
+LCD播放系统是为了统一管理百脑汇各个门店LED显示屏所播放的内容而开发的一套管理工具，涉及android开发，LED播放器的系统定制
 
+### 售楼系统
+售楼系统是一套完整的房屋租赁/买卖系统，用odoo的qweb实现了数据的可视化操作，房屋状态的更新可实时刷新
 
-### 其他项目
+## 上海金针软件有限公司 （ 2011年12月 ~ 2012年12月 ）
 
-（每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）
+### QTS品质追溯系统
+参与松下马达QTS的品质追溯系统，从可行性调研到最后的项目交付整个过程。本人主要负责 原材料功能模块的开发 及 SAP接口，条码枪扫描程序的开发
+QTS 是通过采集生产过程中的每一步信息，组建数据网，通过市场返回的不良品 反向追溯到供应商，加工机床 操作人，以判定 人 机 料 法所存在的问题，从而改善品质，提高效率
 
----
-
-# 开源项目和作品
-
-
-## 开源项目
-（对于程序员来讲，没有什么比Show me the code能有说服力了）
-
- - [STU](http://github.com/yourname/projectname)：项目的简要说明，Star和Fork数多的可以注明
- - [WXYZ](http://github.com/yourname/projectname)：项目的简要说明，Star和Fork数多的可以注明
-
-## 技术文章
-（挑选你写作或翻译的技术文章，好的文章可以从侧面证实你的表达和沟通能力，也帮助招聘方更了解你）
-
-- [一个产品经理眼中的云计算：前生今世和未来](http://get.jobdeer.com/706.get)
-- [来自HeroKu的HTTP API 设计指南(翻译文章)](http://get.jobdeer.com/343.get) （ ```好的翻译文章可以侧证你对英文技术文档的阅读能力```）
-
-## 演讲和讲义
-（放置你代表公司在一些技术会议上做过的演讲，以及你在公司分享时制作的讲义）
-
-  - 2014架构师大会演讲：[如何通过Docker优化内部开发](http://jobdeer.com)
- - 9月公司内部分享：[云计算的前生今世](http://jobdeer.com)
-
----
-
- # 教育背景
-
-
----
 
 # 技能清单
-（我一般主张将技能清单写入到工作经历里边去。不过很难完整，所以有这么一段也不错）
-
 以下均为我熟练使用的技能
 
-- Web开发：PHP/Hack/Node
-- Web框架：ThinkPHP/Yaf/Yii/Lavarel/LazyPHP
-- 前端框架：Bootstrap/AngularJS/EmberJS/HTML5/Cocos2dJS/ionic
-- 前端工具：Bower/Gulp/SaSS/LeSS/PhoneGap
-- 数据库相关：MySQL/PgSQL/PDO/SQLite
-- 版本管理、文档和自动化部署工具：Svn/Git/PHPDoc/Phing/Composer
-- 单元测试：PHPUnit/SimpleTest/Qunit
-- 云和开放平台：SAE/BAE/AWS/微博开放平台/微信应用开发
+- Web开发：ASP.NET
+- 前端框架：Bootstrap/AngularJS/EmberJS/HTML5
+- 数据库相关：postgresql/MSsql
+- 版本管理、文档和自动化部署工具：Svn/Git
+- 单元测试：pytest/Qunit
 
 ---
 
